--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-<div class="tip">Version 1.0</div>
-  <h1 class="title">Walking Counter</h1>
+<div class="tip">You will See your Progress Here!</div>
+  <h1 class="title">Walking Counter v1.0</h1>
 <div class="walking">
 <img src="http://1.bp.blogspot.com/-bd8Jj-iOBEo/UVx2aOY1RyI/AAAAAAAADdc/xRaBCDkPHrk/s1600/walking_man-999px.png" width="50px" height="80px">
 </div>
